simplify if(), delete caloriesDay in UserMeal, change filteredByStreams,map merge